--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "body-parser": "^1.16.1",
     "ejs": "^2.5.6",
+    "ent": "^2.2.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "express-sql-session": "^1.0.0",
     "fortnite-api": "^2.3.1",
     "mysql": "^2.15.0",
     "req-flash": "0.0.3",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "socket.io": "^2.0.4"
   }
 }
