--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "config.json": "0.0.4",
     "ejs": "^2.5.6",
     "ent": "^2.2.0",
     "express": "^4.16.2",
